* added -1218 to the transientDataAccessResourceCodes for DB2 (SPR-5296 backport)
* added override for supportsGetGeneratedKeys for Derby; driver reports this is unsupported, but it seems to work OK (SPR-5306 backport)
* fixed problem retrieving out parameter for function call with MS SQL Server (SPR-5435 backport)

Package org.springframework.jms
* fixed JmsUtils.buildExceptionMessage to avoid potential NPE (SPR-5275)
* fixed JmsException/JmsUtils to fully avoid NPEs in case of cause messages being null
* JMS SingleConnectionFactory performs start call within connection monitor and only when not started already (SPR-5987 backport)
* fixed MessageListenerAdapter's "getSubscriptionName()" to work without delegate as well (SPR-5309 backport)

Package org.springframework.orm
* AnnotationSessionFactoryBean now properly scans subpackages as well (SPR-5324)

Package org.springframework.remoting
* fixed HTTP invoker to support resolution of multi-level primitive array classes again (SPR-5473 backport)

Package org.springframework.transaction
* WebSphereUowTransactionManager preserves original exception in case of rollback (SPR-5270 backport)


Changes in version 2.5.6.SEC01 (2009-04-22)
-------------------------------------

Package org.springframework.aop
* changed serialization behavior of AbstractRegexpMethodPointcut and JdkRegexpMethodPointcut to avoid recompilation

Package org.springframework.core
* fixed issue with GenericTypeResolver where garbage collection was prevented under certain circumstances


Changes in version 2.5.6 (2008-10-31)
-------------------------------------

General
* removed outdated EAR support from sample applications
* upgraded to AspectJ 1.6.2 (retaining compatibility with AspectJ 1.5.x and 1.6.x)
* upgraded to EHCache 1.5.0 (retaining compatibility with EHCache 1.2 and higher)
* upgraded to TestNG 5.8 (retaining compatibility with TestNG 5.5 and higher)