@@ -16,6 +16,7 @@ Package org.springframework.jdbc
 * added -1218 to the transientDataAccessResourceCodes for DB2 (SPR-5296 backport)
 * added override for supportsGetGeneratedKeys for Derby; driver reports this is unsupported, but it seems to work OK (SPR-5306 backport)
 * fixed problem retrieving out parameter for function call with MS SQL Server (SPR-5435 backport)
+* fixed SimpleJdbcInsert/AbstractJdbcInsert to use SQL type info for all insert operations (SPR-5635 backport)
 
 Package org.springframework.jms
 * fixed JmsUtils.buildExceptionMessage to avoid potential NPE (SPR-5275)
